feat: integrate api feedback

--- a/computer_pt_fe/computer_pt_user/src/styles/swiper.scss
+++ b/computer_pt_fe/computer_pt_user/src/styles/swiper.scss
@@ -2,7 +2,7 @@
 .swiper-rtl .swiper-button-prev:after {
   content: "next";
   font-size: 24px;
-  color: #B562A3;
+  color: #1435c5;
   padding: 10px;
 }
 .swiper-button-next {
@@ -16,7 +16,7 @@
 .swiper-rtl .swiper-button-prev:after {
   content: "prev";
   font-size: 24px;
-  color: #B562A3;
+  color: #1435c5;
   padding: 10px;
 }
 .swiper-button-prev {
